--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id 'jacoco'
 }
 
 group = 'org.example'
@@ -13,6 +14,7 @@ repositories {
 dependencies {
     //logback-classic dodaje też slf4j
     implementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.4.5'
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.8.1'
 //    implementation group: 'org.slf4j', name: 'slf4j-api', version: '2.0.5'
     //slf4j-simple domyślnie nie loguje poziomu poniżej info, slf4j-simple zastępuje np. logbacka;
 //    konfiguracja w simplelogger.properties
@@ -27,6 +29,7 @@ dependencies {
 
 //    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.0'
+    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-params', version: '5.9.0'
 }
 
 test {
@@ -34,4 +37,32 @@ test {
     testLogging {
         events "passed","skipped","failed"
     }
+    finalizedBy jacocoTestReport
 }
+jacoco {
+    toolVersion = "0.8.7"
+}
+
+jacocoTestReport {
+    dependsOn test
+    reports {
+        xml.required = false
+        csv.required = false
+        html.outputLocation = layout.buildDirectory.dir('jacocoHtmlCustom')
+    }
+}
+jacocoTestCoverageVerification {
+    violationRules {
+        rule {
+            limit {
+                counter = 'LINE'
+                value = 'COVEREDRATIO'
+                minimum = 0.50
+            }
+        }
+    }
+}
+check.dependsOn jacocoTestCoverageVerification
+
+//TDD - test driven(first) development - najpierw piszemy przykpadki testowe a potem kod; test sprawdza na bieżąco
+// napisany kod, pomaga rozbić kod na małe części
